# fastapi_products_api

./: pyproject.toml
fastapi_products_api/: app.py  database.py  dependencies.py  security.py  settings.py
fastapi_products_api/models/: __init__.py  enums.py  product_user.py  products.py  produts.py  users.py
fastapi_products_api/routers/: auth.py  inventory.py  products.py  users.py
fastapi_products_api/routes/: products.py
fastapi_products_api/schemas/: auth.py  inventory.py  products.py  users.py
migrations/: env.py
migrations/versions/: 44e1b678a650_add_product_price_column.py  7a929477c2e7_create_inventory_table.py  7df3f776d63a_create_products_table.py  880725887a02_create_products_table.py  9fc4e75a5680_create_user_model.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_inventory.py  test_products.py  test_security.py  test_user.py
